--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,17 +2,13 @@
     "parser": "@typescript-eslint/parser",
     "plugins": [
       "react-hooks",
-      "prettier",
       "@typescript-eslint"
     ],
     "extends": [
       "plugin:react/recommended",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:prettier/recommended",
-      "prettier/@typescript-eslint"
-    ],
+      "plugin:@typescript-eslint/recommended"
+      ],
     "rules": {
-      "prettier/prettier": "error",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn"
     },
