--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
+    "yup": "^1.2.0",
     "zustand": "^4.3.7"
   },
   "scripts": {
