--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^10.12.2",
     "jwt-decode": "^3.1.2",
+    "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
